Revision history for Perl module Math::Prime::Util

0.74 ?

    [ADDED]

    - lucky_numbers(n)                array ref of lucky numbers <= n
    - nth_lucky(n)                    the nth lucky number
    - is_lucky(n)                     predicate for lucky number sieve
    - powint(a, b)                    signed integer a^b
    - mulint(a, b)                    signed integer a*b
    - addint(a, b)                    signed integer a+b
    - subint(a,b)                     signed integer a-b
    - divint(a, b)                    signed integer a/b (floor)
    - modint(a, b)                    signed integer a%b (floor)
    - divrem(a, b)                    Euclidean quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
    - random_safe_prime               for n-bit safe primes

    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  From Trizen.

    - todigitstring with non-standard bases and long strings.  From Trizen.

    - Fix v0.62 breaking extended precision long doubles on some machines.
      Big difference in epsilon-level precision for LambertW, Li, Zeta.

    [FUNCTIONALITY AND PERFORMANCE]

    - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.

    - save a nanosecond or two in 32-bit primality testing.

    - Rewrite Ramanujan prime bounds using Axler (2017).  For large values