@@ -211,3 +211,5 @@
   is shortcutting negative range checks.  Why?
 
 - euler_phi should do XS -> GMP directly.  Maybe make totient in PP for uniform name.
+
+- consider making liouville ranged just like moebius and euler_phi.
