@@ -35,6 +35,7 @@ my %mertens = (
 );
 my %big_mertens = (
    100000 =>  -48,
+   444444 =>  -37,
   1000000 =>  212,
  10000000 => 1037,
 );
