@@ -7,6 +7,7 @@ Revision history for Perl module Math::Prime::Util
     - lucky_numbers(n)                array ref of lucky numbers <= n
     - nth_lucky(n)                    the nth lucky number
     - is_lucky(n)                     predicate for lucky number sieve
+    - sumliouville(n)                 L(n), sum of liouville(1..n)
     - powint(a, b)                    signed integer a^b
     - mulint(a, b)                    signed integer a*b
     - addint(a, b)                    signed integer a+b
